# uisp_crm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
uisp_crm/: __init__.py  crm.py
uisp_crm/clients/: __init__.py  clients.py
